--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -1,3 +1,4 @@
+<aside class="secondary">
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <div class="icon-elixir"></div>{{ _('Nodes') }}
@@ -34,3 +35,4 @@
         </ul>
     </nav>
 </div>
+</aside>
