--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -25,6 +25,7 @@
                     <span>United Kingdom</span>
                 </a>
             </li>
+            {{nodes}}
             {% for node in nodes: %}
             <li class="nav-item">
                 <a href="/nodes/{{node.country_code}}.html" title="">
