--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -11,13 +11,73 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/nodes/BE.html" title="">
+                    <span>Belgium</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/nodes/CZ.html" title="">
                     <span>Czech Republic</span>
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/nodes/DK.html" title="">
+                    <span>Denmark</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/EMBL-EBI.html" title="">
+                    <span>EMBL-EBI</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/nodes/EE.html" title="">
                     <span>Estonia</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/FI.html" title="">
+                    <span>Finland</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/FR.html" title="">
+                    <span>France</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/GR.html" title="">
+                    <span>Greece</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/NO.html" title="">
+                    <span>Norway</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/PT.html" title="">
+                    <span>Portugal</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/SI.html" title="">
+                    <span>Slovenia</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/ES.html" title="">
+                    <span>Spain</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/SE.html" title="">
+                    <span>Sweden</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/nodes/CH.html" title="">
+                    <span>Switzerland</span>
                 </a>
             </li>
             <li class="nav-item">
