About page's left hand side menu now flows down as you scroll.

--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -1,4 +1,4 @@
-<aside class="secondary">
+<aside class="secondary" style="position: fixed;">
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <div class="icon-elixir"></div>{{ _('Nodes') }}
