About page's left hand side menu now flows down as you scroll. Actually.

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -151,7 +151,7 @@
 {% endblock %}
 
 {% block secondary %}
-<aside class="secondary">
+<aside class="secondary" style="position: fixed;">
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <div class="icon-filter"></div>{{ _('About') }}
