--- a/ckanext/tess/templates/package/search.html
+++ b/ckanext/tess/templates/package/search.html
@@ -1,5 +1,4 @@
-{% extends "page.html" %}
-{% import 'macros/form.html' as form %}
+{% ckan_extends %}
 
 {% block subtitle %}{{ _("Training materials") }}{% endblock %}
 
@@ -7,9 +6,6 @@
   <li class="active">{{ h.nav_link(_('Training materials'), controller='package', action='search', highlight_actions = 'new index') }}</li>
 {% endblock %}
 
-{% block primary_content %}
-  <section class="module">
-    <div class="module-content">
       {% block page_primary_action %}
         {% if h.check_access('package_create') %}
           <div class="page_primary_action">
@@ -17,52 +13,17 @@
           </div>
         {% endif %}
       {% endblock %}
-      {% block form %}
-        {% set facets = {
-          'fields': c.fields_grouped,
-          'search': c.search_facets,
-          'titles': c.facet_titles,
-          'translated_fields': c.translated_fields,
-          'remove_field': c.remove_field }
-        %}
-        {% set sorting = [
-          (_('Relevance'), 'score desc, metadata_modified desc'),
-          (_('Name Ascending'), 'title_string asc'),
-          (_('Name Descending'), 'title_string desc'),
-          (_('Last Modified'), 'metadata_modified desc'),
-          (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
-        %}
-        {% snippet 'snippets/search_form.html', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, count=c.page.item_count, facets=facets, show_empty=request.params, error=c.query_error, fields=c.fields %}
-      {% endblock %}
-      {% block package_search_results_list %}
-        {{ h.snippet('snippets/package_list.html', packages=c.page.items) }}
-      {% endblock %}
-    </div>
-
-    {% block page_pagination %}
-      {{ c.page.pager(q=c.q) }}
-    {% endblock %}
-  </section>
-
-  {% block package_search_results_api %}
-  <section class="module">
-    <div class="module-content">
-      <small>
-        {% set api_link = h.link_to(_('API'), h.url_for(controller='api', action='get_api', ver=3)) %}
-        {% set api_doc_link = h.link_to(_('API Docs'), 'http://docs.ckan.org/en/{0}/api.html'.format(g.ckan_doc_version)) %}
-        {% if g.dumps_url -%}
-          {% set dump_link = h.link_to(_('full {format} dump').format(format=g.dumps_format), g.dumps_url) %}
-        {%- endif %}
-      </small>
-    </div>
-  </section>
-  {% endblock %}
-{% endblock %}
 
 {% block secondary_content %}
 {# Reorder facets so that 'ELIXIR Nodes' (with internal key 'vocab_elixir_nodes') comes second after 'Content Provider' #}
+<div class="filters">
+  <div>
     {% set facet_keys, facet_values = h.tess_reorder_dataset_facets(c.facet_titles.keys(), c.facet_titles.values()) %}
     {% for facet in facet_keys %}
         {{ h.snippet('snippets/facet_list.html', title=facet_values[loop.index0], name=facet_keys[loop.index0]) }}
     {% endfor %}
+  </div>
+  <a class="close no-text hide-filters"><i class="icon-remove-sign"></i><span class="text">close</span></a>
+</div>
+
 {% endblock %}
