Removed unneccessary blocks, only overriding when need be.

--- a/ckanext/tess/templates/events.html
+++ b/ckanext/tess/templates/events.html
@@ -22,4 +22,17 @@
   </div>
 {% endblock %}
 
-{% block secondary %}{% endblock %}
+{% block secondary %}
+    <div class="module module-narrow module-shallow">
+        <h2 class="module-heading">
+            <div class="icon-filter"></div>{{ _('Source') }}
+        </h2>
+        <nav>
+            <ul class="unstyled nav nav-simple nav-facet">
+                <li class="nav-item">
+                    <a href="#iAnnList" title="">iAnn</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+{% endblock %}
