--- a/ckanext/tess/templates/group/new.html
+++ b/ckanext/tess/templates/group/new.html
@@ -1,13 +1,8 @@
-{% extends "group/base_form_page.html" %}
+{% ckan_extends %}
 
-{% block subtitle %}{{ _('Create a Group') }}{% endblock %}
+{% block subtitle %}{{ _('Create a package') }}{% endblock %}
 
-{% block breadcrumb_link %}{{ h.nav_link(_('Create a Group'), controller='group', action='edit', id=c.group.name) }}{% endblock %}
+{% block breadcrumb_link %}{{ h.nav_link(_('Create a package'), controller='group', action='edit', id=c.group.name) }}{% endblock %}
 
-{% block page_heading %}{{ _('Create a Group') }}{% endblock %}
+{% block page_heading %}{{ _('Create a package') }}{% endblock %}
 
-{% block page_header %}{% endblock %}
-
-{% block secondary_content %}
-  {% snippet "group/snippets/helper.html" %}
-{% endblock %}
