--- a/ckanext/tess/templates/group/new_group_form.html
+++ b/ckanext/tess/templates/group/new_group_form.html
@@ -1,25 +1,12 @@
-{% extends "group/snippets/group_form.html" %}
-
-{#
-As the form is rendered as a seperate page we take advantage of this by
-overriding the form blocks depending on the current context
-#}
-{% block dataset_fields %}
-  {% if action == "edit" %}{{ super() }}{% endif %}
-{% endblock %}
-
-{% block custom_fields %}
-  {% if action == "edit" %}{{ super() }}{% endif %}
-{% endblock %}
+{% ckan_extends %}
 
 {% block save_text %}
   {%- if action == "edit" -%}
-    {{ _('Update Group') }}
+    {{ _('Update package') }}
   {%- else -%}
-    {{ _('Create Group') }}
+    {{ _('Create package') }}
   {%- endif -%}
 {% endblock %}
 
-{% block delete_button %}
-  {% if action == "edit" %}{{ super() }}{% endif %}
+{% block custom_fields %}
 {% endblock %}
