--- a/ckanext/tess/templates/group/read.html
+++ b/ckanext/tess/templates/group/read.html
@@ -1,6 +1,4 @@
-{% extends "group/read_base.html" %}
-
-{% block subtitle %}{{ c.group_dict.display_name }}{% endblock %}
+{% ckan_extends %}
 
 {% block primary_content_inner %}
   {% block groups_search_form %}
@@ -30,9 +28,3 @@
   {% endblock %}
 {% endblock %}
 
-{% block secondary_content %}
-  {{ super() }}
-  {% for facet in c.facet_titles %}
-    {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}) }}
-  {% endfor %}
-{% endblock %}
