Removed some templates which are the same as in CKAN.

--- a/ckanext/tess/templates/group/snippets/info.html
+++ b/ckanext/tess/templates/group/snippets/info.html
@@ -33,7 +33,7 @@
           <dd>{{ h.SI_number_span(group.num_followers) }}</dd>
         </dl>
         <dl>
-          <dt>{{ _('Tr. materials') }}</dt>
+          <dt>{{ _('Training materials') }}</dt>
           <dd>{{ h.SI_number_span(group.packages|length) }}</dd>
         </dl>
       </div>
