--- a/ckanext/tess/templates/organization/base_form_page.html
+++ b/ckanext/tess/templates/organization/base_form_page.html
@@ -1,4 +1,4 @@
-{% extends "organization/edit_base.html" %}
+{% ckan_extends %}
 
 {% block primary_content_inner %}
   <h1 class="{% block page_heading_class %}page-heading{% endblock %}">
