--- a/ckanext/tess/templates/organization/bulk_process.html
+++ b/ckanext/tess/templates/organization/bulk_process.html
@@ -1,6 +1,6 @@
 {% extends "organization/edit_base.html" %}
 
-{% block subtitle %}{{ _('Edit datasets') }} - {{ super() }}{% endblock %}
+{% block subtitle %}{{ _('Edit training materials') }} - {{ super() }}{% endblock %}
 
 {% block page_primary_action %}
   {% link_for _('Add training material'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
