--- a/ckanext/tess/templates/organization/index.html
+++ b/ckanext/tess/templates/organization/index.html
@@ -1,12 +1,10 @@
-{% extends "page.html" %}
+{% ckan_extends %}
 
 {% block subtitle %}{{ _('Content providers') }}{% endblock %}
 
 {% block breadcrumb_content %}
   <li class="active">{% link_for _('Content providers'), controller='organization', action='index' %}</li>
 {% endblock %}
-
-{% block page_header %}{% endblock %}
 
 {% block page_primary_action %}
   {% if h.check_access('organization_create') %}
@@ -34,10 +32,6 @@
     {% endif %}
   {% endblock %}
   {% block page_pagination %}
-    {{ c.page.pager() }}
+    {{ c.page.pager(q=c.q or '', sort=c.sort_by_selected or '') }}
   {% endblock %}
-{% endblock %}
-
-{% block secondary_content %}
-  {% snippet "organization/snippets/helper.html" %}
 {% endblock %}
