--- a/ckanext/tess/templates/organization/new_organization_form.html
+++ b/ckanext/tess/templates/organization/new_organization_form.html
@@ -1,16 +1,4 @@
-{% extends "organization/snippets/organization_form.html" %}
-
-{#
-As the form is rendered as a seperate page we take advantage of this by
-overriding the form blocks depending on the current context
-#}
-{% block dataset_fields %}
-  {% if action == "edit" %}{{ super() }}{% endif %}
-{% endblock %}
-
-{% block custom_fields %}
-  {% if action == "edit" %}{{ super() }}{% endif %}
-{% endblock %}
+{% ckan_extends %}
 
 {% block save_text %}
   {%- if action == "edit" -%}
@@ -18,8 +6,4 @@ overriding the form blocks depending on the current context
   {%- else -%}
     {{ _('Create content provider') }}
   {%- endif -%}
-{% endblock %}
-
-{% block delete_button %}
-  {% if action == "edit" %}{{ super() }}{% endif %}
 {% endblock %}
