--- a/ckanext/tess/templates/organization/read.html
+++ b/ckanext/tess/templates/organization/read.html
@@ -1,4 +1,4 @@
-{% extends "organization/read_base.html" %}
+{% ckan_extends %}
 
 {% block page_primary_action %}
   {% if h.check_access('package_create', {'owner_org': c.group_dict.id}) %}
@@ -32,10 +32,4 @@
   {% block page_pagination %}
     {{ c.page.pager(q=c.q) }}
   {% endblock %}
-{% endblock %}
-
-{% block organization_facets %}
-  {% for facet in c.facet_titles %}
-    {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}) }}
-  {% endfor %}
 {% endblock %}
