--- a/ckanext/tess/templates/organization/read_base.html
+++ b/ckanext/tess/templates/organization/read_base.html
@@ -1,4 +1,4 @@
-{% extends "page.html" %}
+{% ckan_extends %}
 
 {% block subtitle %}{{ c.group_dict.display_name }} - {{ _('Content providers') }}{% endblock %}
 
@@ -17,14 +17,4 @@
   {{ h.build_nav_icon('organization_read', _('Training materials'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('organization_activity', _('Activity Stream'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('organization_about', _('About'), id=c.group_dict.name) }}
-{% endblock %}
-
-{% block secondary_content %}
-  {% snippet 'snippets/organization.html', organization=c.group_dict, show_nums=true %}
-  {% block organization_facets %}{% endblock %}
-{% endblock %}
-
-{% block links %}
-  {{ super() }}
-  {% include "organization/snippets/feeds.html" %}
 {% endblock %}
