Reorganisation of packages/training materials after ckan upgrade to v2.3.

--- a/ckanext/tess/templates/package/base.html
+++ b/ckanext/tess/templates/package/base.html
@@ -1,8 +1,6 @@
-{% extends "page.html" %}
+{% ckan_extends %}
 
 {% set pkg = c.pkg_dict or pkg_dict %}
-
-{% block breadcrumb_content_selected %} class="active"{% endblock %}
 
 {% block subtitle %}{{ _('Training materials') }}{% endblock %}
 
