--- a/ckanext/tess/templates/package/base.html
+++ b/ckanext/tess/templates/package/base.html
@@ -1,6 +1,8 @@
-{% ckan_extends %}
+{% extends "page.html" %}
 
 {% set pkg = c.pkg_dict or pkg_dict %}
+
+{% block breadcrumb_content_selected %} class="active"{% endblock %}
 
 {% block subtitle %}{{ _('Training materials') }}{% endblock %}
 
