CSS style fiddling for home, about and nodes pages and navigation tabs.

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block primary %}
-<div class="primary" style="width: 74%; padding-right: 10px;">
+<div class="primary span9">
     <section class="module">
         {% block about %}
         {% if g.site_about %}
