--- a/ckanext/tess/templates/home/layout1.html
+++ b/ckanext/tess/templates/home/layout1.html
@@ -2,7 +2,7 @@
 {{ h.flash_notice('Please help us shape TeSS to your needs by filling in this <a href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a>.', allow_html=True) }}
 -->
 <div role="main" class="hero">
-    <div class="container">
+    <div class="container container-home">
         <div class="row row1" style="/*padding-bottom:10px; border-bottom-style: solid; border-width: 1px; border-color: #CECECE;*/">
             <div class="span6-homepage col1">
                 {% snippet 'home/snippets/promoted.html' %}
@@ -35,7 +35,7 @@
     </div>
 </div>
 <div role="main">
-    <div class="container">
+    <div class="container container-home">
         <div class="row row2">
             <div class="span6-homepage col1">
                 {% snippet 'home/snippets/latest_news.html' %}
