--- a/ckanext/tess/public/css/tess.css
+++ b/ckanext/tess/public/css/tess.css
@@ -1,28 +1,4 @@
-body {
-  background-color: #F8761F;
-}
-
-
-.masthead a {
-  color: #A24200;
-}
-.masthead .navigation .nav-pills a:hover {
-	color: #FFAC74;
-	background-color: #A24200;
-}
-
-.masthead .navigtaion .nav-pills li.active a {
-	background-color: #A24200;
-}
-
-.container {
-  width: 1000px;
-}
-
-.nav-pills {
-
-}
-/* 
+/*
 Dark Orange #F8761F
 Light Orange #FFAC74
 Text Color #FFAC74
@@ -57,6 +33,7 @@ Text Color #FFAC74
 .masthead {
   background-color:#F3CDB4;
 }
+
 .masthead .content {
   top: 35px;
   right: -30px;
@@ -80,6 +57,10 @@ Text Color #FFAC74
   box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.7);
 }
 
+.navbar .nav > li > a {
+    padding: 10px 7px;
+    color: #A24200;
+}
 
 /* ===========================================
    The content in the middle of the front page
@@ -375,3 +356,6 @@ hr.style-one {
     *width: 97%;
 }
 
+.container-home{
+    width: 1000px;
+}
