--- a/ckanext/tess/templates/nodes/EMBL-EBI.html
+++ b/ckanext/tess/templates/nodes/EMBL-EBI.html
@@ -1,6 +1,6 @@
 {% set node_name = 'EMBL-EBI' %}
 {% set country_code = 'EMBL-EBI' %}
-{% extends "node_template.html" %}
+{% extends "nodes/snippets/node_template.html" %}
 
 {# Override node_template blocks here for custom configuration #}
 
