--- a/ckanext/tess/templates/nodes/SE.html
+++ b/ckanext/tess/templates/nodes/SE.html
@@ -1,6 +1,6 @@
 {% set node_name = 'Sweden' %}
 {% set country_code = 'SE' %}
-{% extends "node_template.html" %}
+{% extends "nodes/snippets/node_template.html" %}
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
