Reduce the size of ELIXIR-UK logo.

--- a/ckanext/tess/templates/footer.html
+++ b/ckanext/tess/templates/footer.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block footer_links %}
-<li><a target="_blank" href="http://elixir-uk.org/"><img src="http://elixir-uk.org/++theme++elixir-uktheme/static/elixir-uk-logo.png"></a></li>
+<li><a target="_blank" href="http://elixir-uk.org/"><img src="/images/elixir-uk-logo-small.png"></a></li>
 {% endblock %}
 
 {% block footer_links_ckan %}
