--- a/ckanext/tess/templates/nodes/snippets/node_template.html
+++ b/ckanext/tess/templates/nodes/snippets/node_template.html
@@ -28,34 +28,34 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 
 
 <div class="module-content">
-    <ul style="position: relative;" class="media-grid masonry" data-module="media-grid">
+    <ul class="media-grid masonry" data-module="media-grid">
 
         {% block news %}
-        <li class="media-item masonry-brick brick">
+        <li class="media-item masonry-brick node-brick">
             {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
         </li>
         {% endblock %}
 
         {% block organizations %}
-        <li class="media-item masonry-brick brick">
+        <li class="media-item masonry-brick node-brick">
             {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
         </li>
         {% endblock %}
 
         {% block materials %}
-        <li class="media-item masonry-brick brick">
+        <li class="media-item masonry-brick node-brick">
             {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}
         </li>
         {% endblock %}
 
         {% block events %}
-        <li class="media-item masonry-brick brick">
+        <li class="media-item masonry-brick node-brick">
             {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
         </li>
         {% endblock %}
 
         {% block staff %}
-        <li class="media-item masonry-brick brick">
+        <li class="media-item masonry-brick node-brick">
             {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
         </li>
         {% endblock %}
