--- a/ckanext/tess/templates/header.html
+++ b/ckanext/tess/templates/header.html
@@ -100,6 +100,7 @@
                     ('search', _('Training materials')),
                     ('workflows', _('Workflows')),
                     ('group_index', _('Packages')),
+                    ('events', _('Events')),
                     ('organizations_index', _('Content Providers')),
                     ('about', _('About'))
                     ) }}
