--- a/ckanext/tess/templates/package/package_form.html
+++ b/ckanext/tess/templates/package/package_form.html
@@ -27,7 +27,7 @@ then itself be extended to add/remove blocks of functionality. #}
         <p class="action-info small">
           {%- trans -%}
           The <i>data license</i> you select above only applies to the contents
-          of any resource files that you add to this dataset. By submitting
+          of any resource files that you add to this training material. By submitting
           this form, you agree to release the <i>metadata</i> values that you
           enter into the form under the
           <a href="http://opendatacommons.org/licenses/odbl/1-0/">Open Database License</a>.
@@ -36,7 +36,7 @@ then itself be extended to add/remove blocks of functionality. #}
       {% endblock %}
       {% block delete_button %}
         {% if h.check_access('package_delete', {'id': data.id}) and not data.state == 'deleted' %}
-          {% set locale = h.dump_json({'content': _('Are you sure you want to delete this dataset?')}) %}
+          {% set locale = h.dump_json({'content': _('Are you sure you want to delete this training material?')}) %}
           <a class="btn btn-danger pull-left" href="{% url_for controller='package', action='delete', id=data.id %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
         {% endif %}
       {% endblock %}
