Added user templates so we can do renaming: dataset->training material, etc.

--- a/ckanext/tess/templates/user/dashboard.html
+++ b/ckanext/tess/templates/user/dashboard.html
@@ -17,9 +17,9 @@
         </div>
         <ul class="nav nav-tabs">
           {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
-          {{ h.build_nav_icon('user_dashboard_datasets', _('My Datasets')) }}
-          {{ h.build_nav_icon('user_dashboard_organizations', _('My Organizations')) }}
-          {{ h.build_nav_icon('user_dashboard_groups', _('My Groups')) }}
+          {{ h.build_nav_icon('user_dashboard_datasets', _('My training materials')) }}
+          {{ h.build_nav_icon('user_dashboard_organizations', _('My content providers')) }}
+          {{ h.build_nav_icon('user_dashboard_groups', _('My packages')) }}
         </ul>
       </header>
     {% endblock %}
