--- a/ckanext/tess/templates/user/dashboard_datasets.html
+++ b/ckanext/tess/templates/user/dashboard_datasets.html
@@ -4,12 +4,12 @@
 
 {% block page_primary_action %}
   {% if h.check_access('package_create') %}
-    {% link_for _('Add Dataset'), controller='package', action='new', class_="btn btn-primary", icon="plus-sign-alt" %}
+    {% link_for _('Add training material'), controller='package', action='new', class_="btn btn-primary", icon="plus-sign-alt" %}
   {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
-  <h2 class="hide-heading">{{ _('My Datasets') }}</h2>
+  <h2 class="hide-heading">{{ _('My training materials') }}</h2>
   {% if c.user_dict.datasets %}
     {% snippet 'snippets/package_list.html', packages=c.user_dict.datasets %}
   {% else %}
