--- a/ckanext/tess/templates/user/dashboard_groups.html
+++ b/ckanext/tess/templates/user/dashboard_groups.html
@@ -4,12 +4,12 @@
 
 {% block page_primary_action %}
   {% if h.check_access('group_create') %}
-    {% link_for _('Add Group'), controller='group', action='new', class_="btn btn-primary", icon="plus-sign-alt" %}
+    {% link_for _('Add package'), controller='group', action='new', class_="btn btn-primary", icon="plus-sign-alt" %}
   {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
-  <h2 class="hide-heading">{{ _('My Groups') }}</h2>
+  <h2 class="hide-heading">{{ _('My packages') }}</h2>
   {% set groups = h.groups_available(am_member=True) %}
   {% if groups %}
     <div class="wide">
@@ -17,7 +17,7 @@
     </div>
   {% else %}
     <p class="empty">
-      {{ _('You are not a member of any groups.') }}
+      {{ _('You do not have any packages.') }}
       {% if h.check_access('group_create') %}
         {% link_for _('Create one now?'), controller='group', action='new' %}
       {% endif %}
