--- a/ckanext/tess/templates/user/dashboard_organizations.html
+++ b/ckanext/tess/templates/user/dashboard_organizations.html
@@ -4,12 +4,12 @@
 
 {% block page_primary_action %}
   {% if h.check_access('organization_create') %}
-    {% link_for _('Add Organization'), controller='organization', action='new', class_="btn btn-primary", icon="plus-sign-alt" %}
+    {% link_for _('Add content provider'), controller='organization', action='new', class_="btn btn-primary", icon="plus-sign-alt" %}
   {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
-  <h2 class="hide-heading">{{ _('My Organizations') }}</h2>
+  <h2 class="hide-heading">{{ _('My content providers') }}</h2>
   {% set organizations = h.organizations_available() %}
   {% if organizations %}
     <div class="wide">
@@ -17,7 +17,7 @@
     </div>
   {% else %}
     <p class="empty">
-      {{ _('You are not a member of any organizations.') }}
+      {{ _('You are not a member of any content providers.') }}
       {% if h.check_access('organization_create') %}
         {% link_for _('Create one now?'), controller='organization', action='new' %}
       {% endif %}
