--- a/ckanext/tess/templates/user/read_base.html
+++ b/ckanext/tess/templates/user/read_base.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content_primary_nav %}
-  {{ h.build_nav_icon('user_datasets', _('Datasets'), id=user.name) }}
+  {{ h.build_nav_icon('user_datasets', _('Training materials'), id=user.name) }}
   {{ h.build_nav_icon('user_activity_stream', _('Activity Stream'), id=user.name) }}
 {% endblock %}
 
@@ -50,7 +50,7 @@
           <dd>{{ h.SI_number_span(user.num_followers) }}</dd>
         </dl>
         <dl>
-          <dt>{{ _('Datasets') }}</dt>
+          <dt>{{ _('Training materials') }}</dt>
           <dd>{{ h.SI_number_span(user.number_created_packages) }}</dd>
         </dl>
         <dl>
